# Rust-Embarcado

./: Cargo.toml  README.md  comandos_iniciais.txt
.cargo/: config.toml
src/: main.rs
src/drivers/led/: esp32.rs  fake_placa.rs  fsm.rs  hw.rs  mod.rs
src/lessons/5/: 5_3.rs
src/lessons/6/: 6_1.rs
src/projeto_boia/: main.rs
src/pwm/: pwm.rs
src/tasks/: led_task.rs  mod.rs
